# MDMH4H

./: .gitignore  FULCRUM_README.md  Ganesh ETL  H4HGUI1.py  README.md  app.py  debug.py  edge_5058_dom.html  example.env  ganesh_etl.py  index.html  render.yaml  requirements-fulcrum-alpha.txt  requirments.txt  run_fulcrum_alpha.py  run_fulcrum_integration_sync_worker.py  run_fulcrum_scheduler.py  tmp_results_dom.html.err  tmp_route_authority_admin_dev_current.html  tmp_route_authority_setup_current.html  tmp_routes_faulthandler.txt  tmp_run_fulcrum_flask_5058.py  tmp_run_fulcrum_flask_5060.py  tmp_run_fulcrum_flask_5062.py  tmp_run_fulcrum_flask_5063.py  tmp_run_fulcrum_flask_5064.py  tmp_run_fulcrum_flask_5068.py  tmp_run_fulcrum_flask_5087.py  tmp_start_5087.cmd  tmp_start_5087_flask.cmd  tmp_start_fulcrum_5087.cmd  tmp_startup_trace.txt  wsgi.py  wsgi_fulcrum.py
Downloads/BACrubby/Breath_Analyzer_FSM/tmp/Breath_Analyzer_PY32F003x8+Target/: CMakeLists.txt  components.cmake  groups.cmake  toolchain.cmake
Downloads/BACrubby/Breath_Analyzer_FSM/tmp/Breath_Analyzer_PY32F003x8+Target/src/Breath_Analyzer_PY32F003x8+Target-stamp/: Breath_Analyzer_PY32F003x8+Target-configure-.cmake  Breath_Analyzer_PY32F003x8+Target-source_dirinfo.txt
Downloads/BACrubby/Breath_Analyzer_FSM/tmp/Breath_Analyzer_PY32F003x8+Target/tmp/: Breath_Analyzer_PY32F003x8+Target-cfgcmd.txt  Breath_Analyzer_PY32F003x8+Target-mkdirs.cmake
app/: __init__.py  config.py
db/: __init__.py  curd.py  fulcrum_runtime.sql  queries.py
deploy/: Caddyfile.fulcrum  add_fulcrum_hosts_mapping.ps1  apply_fulcrum_runtime_schema.py  check_fulcrum_public_route.ps1  ensure_fulcrum_hosted_stack.ps1  install_fulcrum_autostart.ps1  restart_fulcrum_local_5077.ps1  run_fulcrum_bc_reset_publish.py  run_fulcrum_flask_5093.py  run_fulcrum_gate_agent_review.py  run_fulcrum_gate_audit.py  run_fulcrum_generation_job.py  run_fulcrum_logic_regression.py  run_fulcrum_preflight.py  run_fulcrum_release_checks.py  run_fulcrum_watchdog.py  start_caddy_fulcrum.ps1  start_fulcrum_hosted_5067.ps1  start_fulcrum_hosted_5077.ps1  start_fulcrum_hosted_5087.ps1  start_fulcrum_hosted_5093.ps1  start_fulcrum_local_5067.ps1  start_fulcrum_local_5077.ps1  start_fulcrum_localtunnel.js  start_fulcrum_localtunnel_5067.ps1  start_fulcrum_scheduler.ps1  start_fulcrum_sync_worker.ps1  start_fulcrum_waitress.ps1  stop_stale_fulcrum_5092_elevated.ps1
docs/: FULCRUM_BIGCOMMERCE_CALLBACK_VERIFICATION_20260422.json  FULCRUM_BIGCOMMERCE_DEMO_WALKTHROUGH.md  FULCRUM_BIGCOMMERCE_DEVELOPER_PORTAL_FIELDS.md  FULCRUM_BIGCOMMERCE_MARKETPLACE_PLAN.md  FULCRUM_BIGCOMMERCE_REVIEWER_RUNBOOK.md  FULCRUM_BIGCOMMERCE_SUBMISSION_PACKET.md  FULCRUM_CADDY_DEPLOYMENT.md  FULCRUM_DEPLOYMENT.md  FULCRUM_ENTITY_ROUTER_ARCHITECTURE.md  FULCRUM_GO_LIVE_CHECKLIST.md  FULCRUM_LOGIC_CHANGELOG.json  FULCRUM_OPERATIONS_RUNBOOK.md  FULCRUM_PRODUCTION_ARCHITECTURE_PLAN.md  FULCRUM_PRODUCTION_READINESS_2026-05-01.md  FULCRUM_RENDER_DEPLOYMENT.md  FULCRUM_ROUTE_AUTHORITY_HARDENING_REPORT.md  FULCRUM_VPS_PRODUCTION_MIGRATION.md
etl-ganesh-mills/: .gitignore  GaneshMills-PriceCatalog-Effective-February-15-2024-excel.xlsx  ItemNumberMapping.csv  ganesh_etl.py  ganesh_etl_01.py  requirements.txt
etl_scripts/: Ganesh_Mills_Price_Catalog.xlsx  module_ganeshmills.py  module_ganeshmills2.py  module_ganeshmills3.py  module_ganeshmillsa.py
scrap_data/: 2026 Kartri Price List.xlsx  scrapy.cfg  sync_bigcommerce_kartri.py
services/: __init__.py
suppliers/: 1888 Mills Pricelist 03Oct2023 - Rows-Columns.xlsx  2023 Bissell Commercial  Distributor Price List 1-11-2023.xlsx  2023 Master Price List-EXTERNAL.xlsx  2023 Master Price List-SICO.xlsx  Berkshire Hospitality 2023- Hotels4Humanity.xlsx  Forbes Published Price List -  Effective JULY 2023 (R12-20).xls  Ganesh Mills Price Catalog Effective February 15,2024 in excel.xlsx  Ganesh Mills Price Cataloh UNALTERED.xlsx  desktop.ini  (+2 more)
(+463 files in other folders)
